@@ -1,6 +1,13 @@
 2006-08-25  Janis Johnson  <janis187@us.ibm.com>
 
 	Backport from mainline
+	2006-01-18  Ben Elliston  <bje@au.ibm.com>	
+	* expr.c (emit_move_change_mode): Always adjust addresses, not
+	just during reload.  Copy replacements only during reload.
+	(emit_move_insn_1): Move MODE_DECIMAL_FLOAT modes by invoking
+	emit_move_via_integer.
+
+	Backport from mainline
 	2006-01-18  Ben Elliston  <bje@au.ibm.com>
 	* config/rs6000/rs6000.c (rs6000_hard_regno_mode_ok): Reject
 	decimal float modes for all floating point registers.
